{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 28,
  "lineage": "334dcbe4-6ff5-c81f-97e9-1f4ea1e9eb4a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0393ee318b08f4511",
            "arn": "arn:aws:ec2:us-east-1:704321698784:instance/i-03719de9ea26d9bd7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03719de9ea26d9bd7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee647dc0f3f50314",
            "private_dns": "ip-192-168-101-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.101.93",
            "public_dns": "ec2-3-237-240-142.compute-1.amazonaws.com",
            "public_ip": "3.237.240.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-049f239b3dd32e975",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-087c668a82d2d481f",
            "tags": {
              "Env": "dev",
              "Name": "Terraform-ec2-instance"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Terraform-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a1d2aa3a7f029116"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_key",
            "aws_security_group.sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "tls_private_key.ec2_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:security-group/sg-0a1d2aa3a7f029116",
            "description": "allow traffic on 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1d2aa3a7f029116",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "22 for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 for http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "704321698784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webserver-sg",
              "Team": "Devops",
              "owner": "Anthony"
            },
            "tags_all": {
              "Name": "webserver-sg",
              "Team": "Devops",
              "owner": "Anthony"
            },
            "timeouts": null,
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:network-acl/acl-01f77753d610fb735",
            "default_network_acl_id": "acl-01f77753d610fb735",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01f77753d610fb735",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "704321698784",
            "subnet_ids": [
              "subnet-0332a094ba4f7e053",
              "subnet-087c668a82d2d481f",
              "subnet-08ec8e3e4831e21e7",
              "subnet-0b7d0f77b30acf17a"
            ],
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:route-table/rtb-09063f86761b1b2b2",
            "default_route_table_id": "rtb-09063f86761b1b2b2",
            "id": "rtb-09063f86761b1b2b2",
            "owner_id": "704321698784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:security-group/sg-0ed137721f25bb6f5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ed137721f25bb6f5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "704321698784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:internet-gateway/igw-09ef2e115780cc049",
            "id": "igw-09ef2e115780cc049",
            "owner_id": "704321698784",
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09ef2e115780cc049",
            "id": "r-rtb-000b78b5436103e4e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-000b78b5436103e4e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:route-table/rtb-055403db688d740ca",
            "id": "rtb-055403db688d740ca",
            "owner_id": "704321698784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:route-table/rtb-0814223ac149c0745",
            "id": "rtb-0814223ac149c0745",
            "owner_id": "704321698784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:route-table/rtb-000b78b5436103e4e",
            "id": "rtb-000b78b5436103e4e",
            "owner_id": "704321698784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09ef2e115780cc049",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ceb6f4f6c081c48",
            "route_table_id": "rtb-055403db688d740ca",
            "subnet_id": "subnet-0b7d0f77b30acf17a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b2da1d50efc063",
            "route_table_id": "rtb-0814223ac149c0745",
            "subnet_id": "subnet-0332a094ba4f7e053"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0261c024a69a10e91",
            "route_table_id": "rtb-000b78b5436103e4e",
            "subnet_id": "subnet-087c668a82d2d481f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0209a2d2beb56bc1c",
            "route_table_id": "rtb-000b78b5436103e4e",
            "subnet_id": "subnet-08ec8e3e4831e21e7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:subnet/subnet-0b7d0f77b30acf17a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7d0f77b30acf17a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704321698784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:subnet/subnet-0332a094ba4f7e053",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0332a094ba4f7e053",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704321698784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:subnet/subnet-087c668a82d2d481f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087c668a82d2d481f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704321698784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:subnet/subnet-08ec8e3e4831e21e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ec8e3e4831e21e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704321698784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "vpc_id": "vpc-0038aaa517da9d188"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:704321698784:vpc/vpc-0038aaa517da9d188",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01f77753d610fb735",
            "default_route_table_id": "rtb-09063f86761b1b2b2",
            "default_security_group_id": "sg-0ed137721f25bb6f5",
            "dhcp_options_id": "dopt-04a42b1be36f72a28",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0038aaa517da9d188",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09063f86761b1b2b2",
            "owner_id": "704321698784",
            "tags": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            },
            "tags_all": {
              "Name": "utc-app1",
              "created-by": "Anthony",
              "env": "dev",
              "team": "wdp"
            }
          }
        }
      ]
    }
  ]
}